tests/cases/compiler-development/artifact/ok/runtime-output-basic.ari
fn main() -> i64 {
  println("artifact={} ok={}", 17, true);
  std::println("layer={}", 3);
  return 0;
}
